[gd_scene load_steps=8 format=3 uid="uid://dnl7nletpu0p1"]

[ext_resource type="Script" uid="uid://u6abs56pdvmi" path="res://part_4/scripts/main_menu.gd" id="1_qmu46"]
[ext_resource type="Texture2D" uid="uid://yxgme6r1u2fv" path="res://assets/background/main_menu.png" id="2_mh85d"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("2_mh85d")
modulate_color = Color(0.423651, 0.423651, 0.423651, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_l6cm7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l6cm7"]
bg_color = Color(0.899258, 0.899258, 0.899258, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekxnf"]
bg_color = Color(0.733005, 0.733005, 0.733005, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.203922)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qmu46")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -166.0
offset_top = -26.0
offset_right = 166.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Level1Button" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Level 1"

[node name="Level2Button" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Level 2"

[node name="Level3Button" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Level 3"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_l6cm7")
theme_override_styles/hover = SubResource("StyleBoxFlat_l6cm7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ekxnf")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[node name="Label" type="Label" parent="."]
texture_filter = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -214.0
offset_right = 253.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 61
text = "Godot Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Level1Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3Button" to="." method="_on_level_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
